육군 방어 및 대응전략 시뮬레이션 워크스페이스를 추가하여 7월 10일 기준 3워크스페이스완료함  (2026-07-10 13:26)